--- a/src/Pages/Public/History/OrderHistory.css
+++ b/src/Pages/Public/History/OrderHistory.css
@@ -102,6 +102,7 @@ h1::after {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   padding: 1.25rem 1.5rem;
   margin-bottom: 2rem;
+  opacity: 100%;
 }
 
 .filter-header {
@@ -986,6 +987,7 @@ display: flex;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none; /* Firefox */
   padding-bottom: 2px; /* Space for the active indicator */
+  opacity: 100%;
 }
 
 .history-tabs::-webkit-scrollbar {
