--- a/src/Pages/Public/About/About.css
+++ b/src/Pages/Public/About/About.css
@@ -26,6 +26,7 @@
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
     animation: pulse 2s infinite alternate;
     font-weight: 750;
+    color: black
 }
 
 .about-header p {
