--- a/src/Pages/Public/Orders/Order.css
+++ b/src/Pages/Public/Orders/Order.css
@@ -153,7 +153,7 @@ body {
   }
 }
 
-h1 {
+.order-heading {
   font-size: 2.5rem;
   font-weight: 700;
   color: var(--primary-dark-blue);
@@ -163,18 +163,17 @@ h1 {
   display: inline-block;
 }
 
-h1::after {
+.order-heading::after {
   content: '';
   position: absolute;
   bottom: -8px;
   left: 0;
   width: 0;
   height: 4px;
-  background: linear-gradient(90deg, var(--primary-blue), var(--primary-light-blue));
+  
   border-radius: var(--radius-lg);
   animation: lineExpand 1.2s forwards ease-out 0.5s;
 }
-
 @keyframes lineExpand {
   0% {
     width: 0;
