--- a/src/Pages/Public/Orders/Order.css
+++ b/src/Pages/Public/Orders/Order.css
@@ -89,7 +89,7 @@ body {
 }
 
 /* Decorative floating elements */
-.order-container::after {
+/*.order-container::after {
   content: "";
   position: absolute;
   top: 10%;
@@ -100,7 +100,7 @@ body {
   border-radius: 50%;
   z-index: 0;
   animation: float 8s ease-in-out infinite;
-}
+}*/
 
 .order-container::before {
   content: "";
